# bf_patrol

./: .gitignore  CMakeLists.txt  README.md  thirdparty.repos
bt_xml/: assembler.xml  components_provider.xml  patrol.xml  patrol_backup.xml  patrol_notinip.xml  patrol_recharge.xml  remote_dummy.xml  source_2patrol.xml  source_3patrol.xml  source_4patrol.xml  source_bumpgo.xml  source_factory.xml  source_factory2.xml  source_mixed.xml  source_nurse.xml  source_patrol.xml  source_test.xml
config/: factory_params.yaml  params.yaml  patrol_params.yaml
include/bf_patrol/: Assemble.hpp  BatteryChecker.hpp  Forward.hpp  GetComponentLocation.hpp  GetComponents.hpp  GetWaypoint.hpp  IsObstacle.hpp  Move.hpp  Patrol.hpp  PickUpComponent.hpp  Recharge.hpp  ReleaseComponent.hpp  TargetAccomplished.hpp  TrackObjects.hpp  Turn.hpp  datatypes.hpp  utils.hpp
include/bf_patrol/ctrl_support/: BTActionNode.hpp  BTLifecycleCtrlNode.hpp
launch/: assembler.launch.py  assembler3.launch.py  assembler4.launch.py  bf_12_patrol.launch.py  bf_1_patrol.launch.py  bf_2_patrol.launch.py  bf_3_patrol.launch copy.py  bf_3_patrol.launch.py  bf_4_patrol.launch.py  bf_patrol.launch.py  bf_patrol.remote.launch.py  bf_single_patrol.launch.py  bf_single_patrol2.launch.py  bf_single_patrol3.launch.py  bt_patrol.launch.py  factory.assembler.launch copy.py  factory.assembler.launch.py  factory.launch.py  factory.provider1.launch.py  factory.provider2.launch.py  orch_factorylaunch.py  orch_patrol.launch.py  patrol.launch.py  work_patrol.launch.py  worker1.launch.py  worker2.launch.py  worker3.launch.py
map/: lab_map.yaml
params/: config.yaml  factory.yaml  factory_old.yaml  factory_sim.yaml  hotspotsim.yaml  house.yaml  patrol_config-tb3.yaml  patrol_config.yaml  patrol_config_basicmap.yaml  patrol_config_house.yaml  patrol_factory.yaml  patrol_house.yaml  patrol_real.yaml  patrol_sim.yaml  remote_config.yaml  test_config.yaml
src/: bf_patrol_main.cpp  bf_patrol_main_wip.cpp  bt_patrol_main.cpp  factory_main.cpp  factory_robot.cpp  patrol_bt_main.cpp  patrol_main.cpp  remote_main.cpp  remote_tree_main.cpp  single_remote_main.cpp  source_tree_main.cpp  worker_robot.cpp
src/bf_patrol/: Assemble.cpp  Back.cpp  BatteryChecker.cpp  CMakeLists.txt  Forward.cpp  GetComponentLocation.cpp  GetComponents.cpp  GetWaypoint.cpp  IsObstacle.cpp  Move.cpp  Patrol.cpp  PickUpComponent.cpp  Recharge.cpp  ReleaseComponent.cpp  TargetAccomplished.cpp  TrackObjects.cpp  Turn.cpp  package.xml  utils.cpp
src/bf_patrol/bt_xml/: bumpgo.xml  patrol.xml  source_bumpgo.xml  source_bumpgo_p.xml  source_patrol.xml  test_plugins.xml
src/bf_patrol/include/bf_patrol/: Back.hpp  BatteryChecker.hpp  Forward.hpp  GetWaypoint.hpp  IsObstacle.hpp  Recharge.hpp  TrackObjects.hpp
src/bf_patrol/include/bf_patrol/ctrl_support/: BTActionNode.hpp  BTLifecycleCtrlNode.hpp
src/bf_patrol/launch/: bf_patrol.remote.launch.py
src/bf_patrol/params/: config.yaml  remote_config.yaml
src/bf_patrol/src/: remote_tree_main.cpp  source_tree_main.cpp
src/bf_patrol/src/bf_patrol/: GetWaypoint.cpp  IsObstacle.cpp  Move.cpp  Patrol.cpp  Recharge.cpp  TrackObjects.cpp  Turn.cpp
